# holo-nixpkgs

./: .drone.yml  .gitignore  CONTRIBUTING.md  README.md  aarch64-qemu.sh  ci.nix  default.nix  jobsets.nix  overlay.nix  pkgs.nix  release.nix  shell.nix
.github/: CODEOWNERS  settings.yml
artifacts/installers/: config.nix
installers/: config.nix
installers/holoport/: config.nix  default.nix
installers/holoport-nano/: config.nix  default.nix
installers/holoport-plus/: config.nix
lib/: revision.nix
modules/: base.nix  default.nix
modules/boot/: generic-extlinux-compatible.nix
modules/nixpkgs/: host-platform.nix
modules/programs/: holoportos-install.nix
modules/services/: aorura-emu.nix  aurora-led.nix  dnscrypt-proxy2.nix  envoy.nix  holo-admin.nix  holo-auth-client.nix  holo-envoy.nix  holo-health.nix  holo-router-agent.nix  holo-router-gateway.nix  holochain-conductor.nix  holochain.nix  holoport-led-daemon.nix  holoport-led.nix  hp-admin-crypto-server.nix  hpos-admin.nix  hpos-init.nix  hpos-led-manager.nix  magic-wormhole-mailbox-server.nix  sim2h-server.nix
modules/system/: holoportos.nix
nixpkgs/: default.nix  ext4-no-resize2fs.diff  kmod-cross.diff  nixos-ssh-cross.diff  rust-home.diff  rust-windows-cross.diff  source-original.nix  source.nix
nixpkgs/nixos/: default.nix
overlays/holo-nixpkgs/hpos-led-manager/: Cargo.toml  default.nix
overlays/holo-nixpkgs/hpos-led-manager/src/: main.rs
profiles/: default.nix  holoport-plus  self-aware.nix  targets  zerotier.nix
tests/: boot.nix  default.nix  envoy.nix  holo-init.nix
(+253 files in other folders)
