[package]
name = "hpos-led-manager"
version = "0.0.0"
edition = "2018"

[dependencies]
docopt = "1.1.0"
failure = "0.1.6"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.44"

[dependencies.aorura]
git = "https://github.com/Holo-Host/aorura.git"
rev = "2aef90935d6e965cf6ec02208f84e4b6f43221bd"
